# website-automation-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  PRODUCTION_PLAN.md  README.md  agent.py  api.py  browser_tools.py  config.py  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  test_anyof.py  test_browser_tools.py
tests/: __init__.py  test_browser_tools.py
